[Fix] Alignments

--- a/src/styles/pages/Home.module.sass
+++ b/src/styles/pages/Home.module.sass
@@ -255,6 +255,7 @@
     font-size: 20px
 
 .Sector_Swiper
+  display: none
   padding: 0 3rem 3rem !important
 .Sector_Swiper_Prev, .Sector_Swiper_Next
   position: absolute
@@ -490,6 +491,8 @@
   .SectorCard
     &_Image
       width: 40%
+  .Sector_Swiper
+    display: block
   .Idea
     &_Title
       font-size: 30px
